--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
   <body>
     <h1>Welcome to the Vinesh App</h1>
-    <footer>Coded by Kagiso Maphoto</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/KagisoMaphoto" target="_blank"
+        >Kagiso Maphoto</a
+      >, code is hosted on
+      <a href="https://github.com/KagisoMaphoto/Vinesh-App" target="_blank"
+        >Github</a
+      >
+      and website hosted on
+      <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
+    </footer>
   </body>
 </html>
