--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       Coded by
       <a href="https://github.com/KagisoMaphoto" target="_blank"
         >Kagiso Maphoto</a
-      >, code is hosted on
+      >, code is open-sourced on
       <a href="https://github.com/KagisoMaphoto/Vinesh-App" target="_blank"
         >Github</a
       >
-      and website hosted on
+      and hosted on
       <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
