Added HTML to the project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Welcome to the Vinesh App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Pretoria</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/KagisoMaphoto" target="_blank"
