--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinesh App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Pretoria</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌤️ 12°C</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/KagisoMaphoto" target="_blank"
-        >Kagiso Maphoto</a
-      >, code is open-sourced on
-      <a href="https://github.com/KagisoMaphoto/Vinesh-App" target="_blank"
-        >Github</a
-      >
-      and hosted on
-      <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Pretoria</h1>
+          <p>
+            Tuesday 14:49, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>🌤️ 12°C</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/KagisoMaphoto" target="_blank"
+          >Kagiso Maphoto</a
+        >, code is open-sourced on
+        <a href="https://github.com/KagisoMaphoto/Vinesh-App" target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
