--- a/index.html
+++ b/index.html
@@ -11,21 +11,28 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city.." required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input" />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Pretoria</h1>
-          <p>
+        <div class="weather-app-data">
+          <h1 class="weather-app-city">Pretoria</h1>
+          <p class="weather-app-details">
             Tuesday 14:49, scattered clouds
             <br />
-            Humidity: 66%, Wind: 3.13km/h
+            Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
           </p>
         </div>
-        <div>🌤️ 12°C</div>
+        <div class="weather-app-temperature-container">
+          <span class="weather-app-icon">🌤️</span>
+          <span class="weather-app-temperature">12°C</span>
+        </div>
       </main>
       <footer>
         Coded by
