--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
@@ -46,5 +46,6 @@
         <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
