--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
       <main>
         <div class="weather-app-data">
-          <h1 class="weather-app-city">Pretoria</h1>
+          <h1 class="weather-app-city" id="city">Pretoria</h1>
           <p class="weather-app-details">
             Tuesday 14:49, scattered clouds
             <br />
