--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <div class="weather-app-data">
           <h1 class="weather-app-city" id="city"></h1>
           <p class="weather-app-details">
-            Friday 14:49, scattered clouds
+            Friday 14:49, <span id="description"></span>
             <br />
-            Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            Humidity: <strong id="humidity"></strong>, Wind:
+            <strong id="wind"></strong>
           </p>
         </div>
         <div class="weather-app-temperature-container">
