--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!-- @format -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,25 +23,28 @@
             placeholder="Enter a city.."
             required
             class="search-form-input" />
-          <input type="submit" value="search" class="search-form-button" />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
+
       <main>
         <div class="weather-app-data">
           <h1 class="weather-app-city" id="city"></h1>
           <p class="weather-app-details">
-            Friday 14:49, <span id="description"></span>
+            <span id="time">--:--</span>, <span id="description">---</span>
             <br />
-            Humidity: <strong id="humidity"></strong>, Wind:
-            <strong id="wind"></strong>
+            Humidity: <strong id="humidity">--</strong>, Wind:
+            <strong id="wind-speed">--</strong>
           </p>
         </div>
+
         <div class="weather-app-temperature-container">
-          <span class="weather-app-icon">🌤️</span>
-          <span class="weather-app-temperature" id="temperature"></span>
-          <span class="weather-app-unit"> °C </span>
+          <span id="icon" class="weather-app-icon">🌤️</span>
+          <span class="weather-app-temperature" id="temperature">--</span>
+          <span class="weather-app-unit">°C</span>
         </div>
       </main>
+
       <footer>
         Coded by
         <a href="https://github.com/KagisoMaphoto" target="_blank"
@@ -55,6 +57,7 @@
         <a href="https://vineshapp.netlify.app/" target="_blank">Netlify</a>
       </footer>
     </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
